# Data_Viz

./: .gitignore  Makefile  README.md
Design/: API.md  App.md  Data.md  Project.md
Design/standards/: Code.md  Design-docs.md
api/: pyproject.toml
api/src/fishfinder/: claude.py  main.py
api/src/fishfinder/data/: load.py  queries.py
api/src/fishfinder/routes/: fish.py  query.py  visits.py
api/tests/: test_api.py  test_claude.py  test_load.py
app/: index.html  package.json  pnpm-lock.yaml
app/src/: App.tsx  index.css  main.tsx
app/src/client/: api.ts
app/src/lib/: jitter.ts
app/src/panes/FishTimelineMap/: FishTimelineMap.tsx  index.ts
app/src/panes/OverviewMap/: OverviewMap.tsx  index.ts
app/src/panes/QueryBar/: QueryBar.tsx  index.ts
app/src/state/: store.tsx
data/: StationaryData_CLEAN_all.csv
