[project]
name = "fishfinder"
version = "0.1.0"
description = "Fishfinder API: JSATS fish detection data over DuckDB, exposed via FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "duckdb>=1.1",
    "pandas>=2.2",
    "anthropic>=0.40",
    "pydantic>=2.9",
    "sqlglot>=25",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pyright>=1.1",
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fishfinder"]
